# fdmpricer_API

./: Dockerfile.dev  README.md  docker-compose.yml  docker-compose.yml.bak  pyproject.toml  tc
PricingAPI/: README.md  app.py  main.py  test_api.py
fdm/: FDCnEu.py  FDExplicitEu.py  FDImplicitEu.py  FiniteDifferences.py  main.py
toolchain/: create_toolchain.sh
toolchain/toolchain/: tc
toolchain/toolchain/scripts/: code.sh  dev.sh  setup.sh
toolchain/toolchain/templates/: Dockerfile.dev
toolchain/toolchain/templates/.devcontainer/: devcontainer.json
