[tool.poetry]
name = "fdmpricer"
version = "1.0"
description = "Finite Difference Method Option Pricer and API"
authors = ["Paul Lopez <nik.lopez381@gmail.com>"]
readme = "README.md"

# Correctly formatted packages section
packages = [
    {include = "PricingAPI"},
    {include = "fdm"}
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.10"
pandas = ">=1.3.3"
matplotlib = ">=3.4.3"
fastapi = ">=0.68.1"
uvicorn = ">=0.15.0"
pydantic = ">=1.8.2"
numpy = ">=1.21.2"
requests = ">=2.26.0"
scipy = ">=1.7.3"

[tool.poetry.scripts]
# API entry point
pricing-api = "PricingAPI.main:start"
# CLI/main entry point for the pricing module 
fdm-pricer = "fdm.main:main"
